# rucene

./: .gitignore  Cargo.toml
examples/: basic_points_qps.rs  basic_points_range.rs  benchmark_nyc_taxis.rs  benchmark_nyc_taxis_simple.rs  test_range.txt
src/: error.rs  lib.rs
src/core/index/reader/: segment_reader.rs
src/core/index/writer/: index_writer.rs
src/core/search/: searcher.rs
src/core/search/query/: filter_query.rs  mod.rs  point_range_query.rs
src/core/store/io/: buffered_checksum_index_input.rs  mmap_index_input.rs
src/core/util/: doc_id_set_builder.rs
src/core/util/packed/: packed_simd.rs
