[package]
name = "rucene"
version = "0.1.1"
authors = ["Zhihu Search Team"]
repository = "https://github.com/zhihu/rucene"
license-file = "LICENSE"
description = """
Rucene is a Rust port of the popular Apache Lucene project. Rucene is 
not a complete application, but rather a code library and API that 
can easily be used to add full text search capabilities to applications.
"""

[dependencies]
bytes = "1.5"
chan = "0.1.23"
chan-signal = "0.3.3"
crc32fast = "1.4.0"
crossbeam = "0.8.4"
either = "1.10.0"
error-chain = "0.12.4"
fasthash = "0.4.0"
flate2 = "1.0.28"
lazy_static = "1.4.0"
log = "0.4.21"
memmap = "0.7.0"
num_cpus = "1.16.0"
rand = "0.8.5"
regex = "1.10.3"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"  
smallvec = "1.13.1"
thread_local = "1.1.8"
unicode_reader = "1.0.2"
num-traits = "0.2.18"
byteorder = "1.5.0"
crunchy = "0.2.2"
crossbeam-channel = "0.5"


[dev-dependencies]
tempfile = "3.0.8"

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
debug-assertions = false